--- a/src/StyleSheets/Header.css
+++ b/src/StyleSheets/Header.css
@@ -48,10 +48,12 @@
 
 .KPText {
     min-width: 60px;
-    width: 30%;
+    width: 20%;
 }
 
 .PortfolioText {
+    padding-bottom: 15px;
+    padding-top: 15px;
     width: 40%;
 }
 
@@ -62,7 +64,6 @@
     font-size: 17px;
     font-weight: bold;
     justify-content: space-evenly;
-    margin-top: 10px;
     text-transform: uppercase;
     width: 60%;
 }
