--- a/src/StyleSheets/Styling.css
+++ b/src/StyleSheets/Styling.css
@@ -1,3 +1,45 @@
+.carouselArrowImage {
+    background-color: grey;
+    cursor: pointer;
+    max-height: 7.5%;
+    opacity: 0;
+    padding: 10px;
+    position: absolute;
+    transition: opacity 0.3s ease;
+  }
+
+.carouselContainer {
+    align-items: center;
+    display: flex;
+    height: max-content;
+    justify-content: center;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+.carouselContainer .carouselArrowImage:hover {
+    opacity: 1 !important;
+}
+
+.carouselContainer:hover .carouselArrowImage {
+    opacity: 0.3;
+}
+
+.carouselImage {
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.carouselLeftArrowImage {
+    left: 0;
+}
+
+.carouselRightArrowImage {
+    right: 0;
+}
+
 .Navigation-Child {
     align-items: center;
     display: flex;
