--- a/src/StyleSheets/Styling.css
+++ b/src/StyleSheets/Styling.css
@@ -1,14 +1,16 @@
 .page-Item-Text-Box {
     background-color: rgba(0, 0, 0, 0.8);
-    bottom: 2vh;
     color: white;
     display: flex;
     flex-direction: column;
     font-size: clamp(16px, 4vw, 18px);
     justify-content: center;
     padding: 10px 2vw 10px 2vw;
-    position: absolute;
+    margin-top: 60px;
     text-align: center;
+
+    white-space: pre-wrap;
+
 }
 
 .page-Item-Text-Title {
@@ -68,8 +70,8 @@
     padding-left: 5px;
     padding-right: 5px;
     position: absolute;
-    left: 20px;
-    top: 20px;
+    left: 10px;
+    top: 10px;
     width: fit-content;
 }
 
