--- a/src/StyleSheets/Styling.css
+++ b/src/StyleSheets/Styling.css
@@ -6,11 +6,10 @@
     font-size: clamp(16px, 4vw, 18px);
     justify-content: center;
     padding: 10px 2vw 10px 2vw;
+    margin: 10px;
     margin-top: 60px;
     text-align: center;
-
     white-space: pre-wrap;
-
 }
 
 .page-Item-Text-Title {
