--- a/src/StyleSheets/Styling.css
+++ b/src/StyleSheets/Styling.css
@@ -14,9 +14,13 @@
     justify-content: center;
     padding: 10px 2vw 10px 2vw;
     margin: 10px;
-    margin-top: 60px;
+    margin-top: 10px;
     text-align: center;
     white-space: pre-wrap;
+}
+
+.page-Item-Text-Box-Container {
+    padding-top: 60px;
 }
 
 .page-Item-Text-Title {
@@ -38,6 +42,7 @@
 .page-Item {
     align-items: center;
     display: flex;
+    flex-direction: column;
     height: max-content;
     justify-content: center;
     margin: auto;
