--- a/src/StyleSheets/Styling.css
+++ b/src/StyleSheets/Styling.css
@@ -7,7 +7,6 @@
 
 .page-Item-Text-Box {
     background-color: rgba(0, 0, 0, 0.8);
-    color: white;
     display: flex;
     flex-direction: column;
     font-size: clamp(16px, 4vw, 18px);
@@ -41,6 +40,7 @@
 
 .page-Item {
     align-items: center;
+    color: white;
     display: flex;
     flex-direction: column;
     height: max-content;
@@ -65,6 +65,19 @@
     opacity: 0.3;
 }
 
+.Project-Link {
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 15px;
+    font-size: clamp(16px, 4vw, 18px);
+    font-weight: bold;
+    padding: 5px 40px 5px 40px;
+    text-transform: uppercase;
+}
+
+.Project-Link:hover {
+    background-color: black;
+}
+
 .carouselImage {
     max-height: 100%;
     max-width: 100%;
@@ -80,7 +93,6 @@
 
 .PageItemTitle {
     background-color: black;
-    color: white;
     font-size: clamp(18px, 4vw, 30px);
     font-weight: bold;
     padding-left: 5px;
