--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ a {
   font-size: clamp(16px, 4vw, 18px);
   justify-content: center;
   padding: 10px 2vw 10px 2vw;
-  margin: 10px;
+  margin-bottom: 10px;
   margin-top: 10px;
   text-align: center;
   white-space: pre-wrap;
