Better navigation styling 2

--- a/src/App.css
+++ b/src/App.css
@@ -233,6 +233,11 @@ a {
   display: none;
 }
 
+.Menu-Icon:hover + .Mobile-Nav-Menu,
+.Navigation-Menu:hover {
+  display: block;
+}
+
 /* ---------- View Ports ----------*/
 @media screen and (max-width: 900px) {
   .Page-Social-Icon-Container {
@@ -263,9 +268,33 @@ a {
   .Menu-Icon {
     display: inline;
     height: 30px;
-    position:absolute;
-    right: 15px;
-    top: 10px;
+    position: absolute;
+    right: 0;
+    z-index: 2;
+    padding: 15px;
+  }
+
+  .Mobile-Nav-Links-Container{
+    color: white;
+    flex-direction: column;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: right;
+  }
+
+  .Mobile-Nav-Link {
+    margin-bottom: 20px;
+  }
+
+  .Mobile-Nav-Menu {
+    position: absolute;
+
+    background-color: black;
+    top: 0;
+    height: 100vh;
+    padding-right: 30px;
+    padding-top: 70px;
+    width: 100vw;
   }
 
   .carouselArrowImage {
@@ -314,5 +343,6 @@ a {
     display: inline;
     height: 20px;
     width: auto;
+    z-index: 1;
   }
 }
