--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,15 @@ a {
   transform: scale(1.1);
 }
 
+.Mobile-Nav-Social-Icon-Container {
+  bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+}
+
 .socialIconsContainer {
   bottom: 0;
   display: flex;
