--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ a {
   min-height: 100vh;
 }
 
+.page-Item-Bottom-Divider {
+  border: 1px solid rgb(219, 219, 219);;
+  width: 90%;
+
+}
+
 .Page-Container {
   display: flex;
   flex-direction: column;
